PYTHIA6_SOURCES   =  \
py1ent.f \
py2ent.f \
py2frm.f \
py3ent.f \
py4ent.f \
py4frm.f \
py4jet.f \
py4jts.f \
py4jtw.f \
py6frm.f \
pyadsh.f \
pyalem.f \
pyalps.f \
pyangl.f \
pyapps.f \
pybesq.f \
pybksb.f \
pyboei.f \
pybook.f \
pycba2.f \
pycbal.f \
pycdiv.f \
pycell.f \
pychge.f \
pycjdc.f \
pyckbd.f \
pyclus.f \
pycmq2.f \
pycmqr.f \
pycomp.f \
pycrth.f \
pycsrt.f \
pyct5l.f \
pyct5m.f \
pycteq.f \
pycttr.f \
pydata.f \
pydcyk.f \
pydecy.f \
pydiff.f \
pydisg.f \
pydocu.f \
pydump.f \
pyedit.f \
pyeevt.f \
pyeicg.f \
pyeig4.f \
pyerrm.f \
pyevnt.f \
pyevnw.f \
pyevol.f \
pyexec.f \
pyfact.f \
pyfcmp.f \
pyfeyn.f \
pyfill.f \
pyfint.f \
pyfisb.f \
pyfowo.f \
pyfram.f \
pyfscr.f \
pygaga.f \
pygamm.f \
pygano.f \
pygau2.f \
pygaus.f \
pygbeh.f \
pygdir.f \
pygfxx.f \
pyggam.f \
pygive.f \
pyglui.f \
pygram.f \
pygrvd.f \
pygrvl.f \
pygrvm.f \
pygrvs.f \
pygrvv.f \
pygrvw.f \
pygvmd.f \
pyh2xx.f \
pyhepc.F \
pyhext.f \
pyhfth.f \
pyhggm.f \
pyhist.f \
pyi3au.f \
pyinbm.f \
pyindf.f \
pyinit.f \
pyinki.f \
pyinom.f \
pyinpr.f \
pyinre.f \
pyjmas.f \
pyjoin.f \
pyjurf.f \
pyk.f \
pykfdi.f \
pykfin.f \
pyklim.f \
pykmap.f \
pylamf.f \
pyldcm.f \
pylhef.f \
pylist.F \
pylogo.f \
pymael.f \
pymass.f \
pymaxi.f \
pymemx.f \
pymewt.f \
pymign.f \
pymihg.f \
pymihk.f \
pymirm.f \
pymrun.f \
pymsin.f \
pymult.f \
pyname.f \
pynjdc.f \
pynmes.f \
pynull.f \
pyofsh.f \
pyonia.f \
pyonof.f \
pyoper.f \
pypcmp.f \
pypdel.f \
pypdfl.f \
pypdfu.f \
pypdga.f \
pypdpi.f \
pypdpo.f \
pypdpr.f \
pyp.f \
pypile.f \
pyplot.f \
pypole.f \
pyprep.f \
pyptdi.f \
pyptfs.f \
pyptis.f \
pyptmi.f \
pyqqbh.f \
pyradk.f \
pyrand.f \
pyreco.f \
pyremn.f \
pyresd.f \
pyr.f \
pyrget.f \
pyrghm.f \
pyrnm3.f \
pyrnmq.f \
pyrobo.f \
pyrset.f \
pyrvch.f \
pyrvg1.f \
pyrvg2.f \
pyrvg3.f \
pyrvg4.f \
pyrvgl.f \
pyrvgw.f \
pyrvi1.f \
pyrvi2.f \
pyrvi3.f \
pyrvne.f \
pyrvr.f \
pyrvsb.f \
pyrvs.f \
pyrvsf.f \
pysave.f \
pyscat.f \
pysfdc.f \
pysgex.f \
pysghf.f \
pysghg.f \
pysgqc.f \
pysgsu.f \
pysgtc.f \
pysgwz.f \
pyshow.f \
pysigh.f \
pysimp.f \
pyslha.f \
pyspen.f \
pysphe.f \
pyspli.f \
pysspa.f \
pystat.f \
pystbh.f \
pystop.f \
pystrf.f \
pysubh.f \
pysugi.f \
pytabu.f \
pytbbc.f \
pytbbn.f \
pytbdy.f \
pytbhb.f \
pytbhg.f \
pytbhq.f \
pytbhs.f \
pytecm.f \
pytest.f \
pythag.f \
pythrg.f \
pythru.f \
pytune.f \
pyuedc.f \
pyupda.f \
pyupev.f \
pyupin.f \
pyupre.f \
pyveto.F \
pywaux.f \
pywidt.f \
pywidx.f \
pyx2xg.f \
pyx2xh.f \
pyx3jt.f \
pyx4jt.f \
pyxdif.f \
pyxdin.f \
pyxjet.f \
pyxkfl.f \
pyxtee.f \
pyxtot.f \
pyxued.f \
pyxxga.f \
pyxxz6.f \
pyzdis.f \
pygraw.f \
pywdkk.f


lib_LTLIBRARIES = libpythia6.la
INCLUDES = -I$(top_srcdir)/include
AM_FFLAGS = $(INCLUDES)

libpythia6_la_SOURCES = $(PYTHIA6_SOURCES)

install-exec-local:
	@echo "Installing pydata."$(OBJEXT)" to $(libdir) ..." ; \
	mkdir -p $(libdir)/archive/ && \
	cp -f pydata.$(OBJEXT) $(libdir)/ && \
	cp -f pydata.lo        $(libdir)/ && \
	cd $(libdir)/archive/ &&  \
	rm -f pydata.$(OBJEXT) pydata.lo  && \
	ln -s -f ../pydata.$(OBJEXT) .    && \
	ln -s -f ../pydata.lo        .

